# kvk-audio-player

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  compile_and_run.sh  compile_commands.json  make_debug.sh  make_release.sh
forms/: mainwindow.ui
lib/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
lib/.qt/: QtDeploySupport.cmake
src/: MusicBuffer.cpp  MusicBuffer.h  MusicDataViewItem.hpp  SoundBuffer.cpp  SoundBuffer.h  SoundDevice.cpp  SoundDevice.h  SoundSource.cpp  SoundSource.h  log.h  main.cpp  mainwindow.cpp  mainwindow.h
